# sfuzz

./: .gitignore  Cargo.toml  README.md
benchmarks/linknan/: phase1_corpus_manifest.csv
config/: sfuzz.toml  surgefuzz_targets.toml
docs/: abi_smoke.md  benchmark_plan.md  directfuzz.md  firrtl_litmus_coverage_report.md  litmus_to_c.md  profuzz.md  rfuzz.md  sfuzz_coverage_points.md  surgefuzz.md  t1_common_backend_plan.md
scripts/: linknan_abi_smoke.py  linknan_abi_smoke.sh  linknan_vcs_smoke.py  litmus_to_c.py  make_sfuz_seed.py  sfuzz.toml
scripts/linknan/: __init__.py  audit_t2_campaign.py  build_corpus.py  build_semantic_workload_corpus.py  common.py  config.py  directfuzz_static.py  known_good_gate.py  rfuzz_abi.py  run.py  seeds.py  sfuzz_scenarios.py  surgefuzz_ancestors.py  surgefuzz_profile.py  surgefuzz_program.py  surgefuzz_targets.py  t2_four_fuzzer_campaign.py  vcs.py  workload_mutation.py
scripts/linknan/methods/: __init__.py  directfuzz.py  profuzz.py  rfuzz.py  sfuzz.py  surgefuzz.py
src/: coverage.rs  coverage_strategy.rs  directed.rs  fuzzer.rs  harness.rs  lib.rs  monitor.rs  seed.rs  seed_codec.rs
src/methods/: mod.rs
src/methods/directfuzz/: energy.rs  metadata.rs  mod.rs  scheduler.rs
src/methods/profuzz/: feedback.rs  mod.rs  mutation.rs  pattern.rs  target.rs
src/methods/rfuzz/: coverage.rs  feedback.rs  input.rs  mod.rs  mutators.rs
src/methods/surgefuzz/: coverage.rs  metadata.rs  (+3 more)
tests/: test_linknan_formal_runners.py  test_linknan_sfuzz.py  test_linknan_surgefuzz.py  test_linknan_t2_audit.py  test_linknan_tohost_monitor.py
